manifests/templates/gateways/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-1-service
                port:
                  number: 80
          - path: /common
            pathType: Prefix
            backend:
              service:
                name: back-2-service
                port:
                  number: 80
